add buttons and leds to configuration

--- a/Rarchi_game/Rarchi_game.ioc
+++ b/Rarchi_game/Rarchi_game.ioc
@@ -12,12 +12,17 @@ Mcu.IPNb=4
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PA13
-Mcu.Pin2=PA14
-Mcu.Pin3=PB6
-Mcu.Pin4=PB7
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.PinsNb=6
+Mcu.Pin1=PB10
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin2=PB11
+Mcu.Pin3=PB12
+Mcu.Pin4=PB13
+Mcu.Pin5=PB14
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
+Mcu.Pin8=PB6
+Mcu.Pin9=PB7
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -38,6 +43,28 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PB10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB10.GPIO_Label=BUTTON_LEFT
+PB10.GPIO_PuPd=GPIO_PULLUP
+PB10.Locked=true
+PB10.Signal=GPIO_Input
+PB11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB11.GPIO_Label=BUTTON_RIGHT
+PB11.GPIO_PuPd=GPIO_PULLUP
+PB11.Locked=true
+PB11.Signal=GPIO_Input
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=RGB_RED
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=RGB_BLUE
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=RGB_GREEN
+PB14.Locked=true
+PB14.Signal=GPIO_Output
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
